--- a/_data/people.yml
+++ b/_data/people.yml
@@ -256,6 +256,19 @@
       "(2027) B.S. in School of Computing. KAIST (expected).",
     ]
 
+- id: subeen.park
+  name: Subeen Park
+  korean_name: 박수빈
+  status: present
+  role: B.S. Student
+  image: assets/images/people/subeen.park.jpg
+  place: Rm. 4441, Bldg. E3-1, KAIST (+82-42-350-7878)
+  github: psb0623
+  educations:
+    [
+      "(2025) B.S. in School of Computing. KAIST (expected).",
+    ]
+
 - id: seungho.jang
   kaist_id: seungho.jang
   name: Seungho Jang
